use filename instead of uuids
